# devops-study-app

./: .dockerignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  README.md  renovate.json5
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  frontend-tests.yaml  release-please.yaml
src/backend/: CHANGELOG.md  Dockerfile  Dockerfile.podman  Dockerfile.podman.secured  Dockerfile.secured  pyproject.toml
src/backend/src/backend/: config.py  main.py  models.py  storage.py
src/backend/src/data/: sessions.csv
src/demo/: Dockerfile  README.md  pyproject.toml
src/frontend/: Dockerfile  Dockerfile.podman.secured  Dockerfile.secured  pyproject.toml
src/frontend/src/frontend/: main.py
src/frontend/src/frontend/templates/: base.html  index.html
