[project]
name = "study-tracker-backend"
version = "0.1.0"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [
    { name = "Milan Vojnovic", email = "milan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "uvicorn>=0.49.0",
]

[project.scripts]
study-tracker-api = "backend.main:main" # backend (directory), main (filename), main (function)

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
