[project]
name = "study-tracker-frontend"
version = "0.0.0"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [
    { name = "Milan Vojnovic", email = "milan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "requests>=2.34.2",
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[[tool.uv.index]]
name = "nexus"
url = "http://nexus.milanoid.net:8081/repository/pypi-group/simple/"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "responses>=0.26.1",
    "ruff>=0.15.17",
]
